--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.0",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.5.0",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dnd": "^14.0.2",
